--- a/index.css
+++ b/index.css
@@ -1,19 +1,24 @@
 .Logo {
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
   top: 50%;
-  height: 60px; 
+  transform: translate(-50%, -50%);
 }
-body {
-  margin: 0;
 
-  background-image: url('dirt_background.png'), url('dirt_background.png');
-  background-repeat: no-repeat, repeat-y;
-
-  background-size: 100% auto, 100% auto;
-
-  background-position: top center, bottom center;
+.Logo img {
+  height: 60px;
+  width: auto;
+}
+body::after {
+  content: '';
+  position: fixed;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('dirt_background.png') repeat-y top center;
+  background-size: 100% auto;
+  z-index: -1;
 }
 header {
   position: relative;
