--- a/index.css
+++ b/index.css
@@ -1,33 +1,34 @@
-.Logo {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+body {
+  margin: 0;
 }
 
-.Logo img {
-  height: 60px;
-  width: auto;
+header {
+  height: 150px;
+  background-image: url('dirt_background.png');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: top center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
+
+.logo {
+  height: 60px;
+}
+
 body::after {
-  content: '';
+  content: "";
   position: fixed;
-  top: 100px;
+  top: 150px;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('dirt_background.png') repeat-y top center;
+  background-image: url('dirt_background.png');
+  background-repeat: repeat-y;
   background-size: 100% auto;
+  background-position: top center;
   z-index: -1;
-}
-header {
-  position: relative;
-  height: 100px; 
-  background-color: #00ff11; 
-  padding: 0 20px;
-}
-nav {
-  display: flex;
-  gap: 20px;
-  height: 100%;
 }
