--- a/index.css
+++ b/index.css
@@ -1,34 +1,131 @@
 body {
   margin: 0;
+  background-image: url('dirt_background.jpg'), url('dirt_background.jpg');
+  background-repeat: no-repeat, repeat-y;
+  background-size: 100% auto, 100% auto;
+  background-position: top center, top center;
+  padding-top: 160px;
+  font-family: 'Press Start 2P', monospace, Arial, sans-serif;
 }
 
 header {
-  height: 150px;
-  background-image: url('dirt_background.png');
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  background-position: top center;
-
   display: flex;
-  justify-content: center;
   align-items: center;
-  position: relative;
+  justify-content: space-between; 
+  padding: 0 20px;
+  height: 150px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255, 0);
 }
+
 
 .logo {
-  height: 60px;
+  height: 140px;
+  flex-shrink: 0;
 }
 
-body::after {
-  content: "";
-  position: fixed;
-  top: 150px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('dirt_background.png');
-  background-repeat: repeat-y;
-  background-size: 100% auto;
-  background-position: top center;
-  z-index: -1;
+
+h1 {
+  font-size: 2.5rem; 
+  margin: 0;
+  text-align: center;
+  flex-grow: 1; 
 }
+
+hr{
+  color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#video-container {
+      display: none;
+      width: 560px;
+      height: 315px;
+      margin 20px auto;
+      
+    }
+    #my-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    #my-button img {
+      width: 120px; 
+      height: auto;
+    }
+    #image-to-hide {
+      width: 200px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
