--- a/index.css
+++ b/index.css
@@ -20,46 +20,96 @@ header {
   right: 0;
   z-index: 1000;
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0);
+  background-image: url(dirt_background.jpg);
+  background-size: 100% auto;
+  background-position: center top;
+  background-repeat: repeat-y;
 }
 
+header h1 {
+  flex: 1;
+  text-align: center;
+  font-size: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  margin: 0 20px; 
+  padding-top: 20px;
+  vertical-align: middle;
+}
 
 .logo {
-  height: 140px;
-  flex-shrink: 0;
+  height: 110px;
+  margin-top: 0; 
+  align-self: flex-start; 
 }
 
-
-h1 {
-  font-size: 2.5rem; 
-  margin: 0;
-  text-align: center;
-  flex-grow: 1; 
-}
 
 hr{
-  color: black;
+  border: none;
+  height: 3px;
+  background-color: black;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
+
+
+main{
+  padding-top: 16px;
+  color: white;
+}
+
+.alahuzas{
+  display: inline-block;
+  border-bottom: 2px solid black;
+  padding-bottom: 0px;
+}
+
+a{
+  color: #5E9D34;
+}
+
+figure figcaption{
+  text-align: center;
+  size: 5px;
 }
 
 
+.bal_margo{
+  margin-left: 2px;
+}
 
+.controls-table {
+  border-collapse: collapse;
+  margin-left: 16px;
+  color: white;
+  size: 5px;
+  line-height: 24px;
+  text-justify: auto;
+}
 
+.controls-table td {
+  padding: 4px 12px;
+  border: none;
+  vertical-align: top;
+  overflow: hidden;
+}
 
+.key {
+  background-color: #5e9d34e0;
+  color: black;
+  padding: 2px 6px;
+  border-radius: 4px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: inline-block;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.table_title{
+  text-align: left;
+  padding-bottom: 8px;
+  padding-top: 12px;
+}
 
 
 
@@ -108,17 +158,19 @@ hr{
 
 
 #video-container {
-      display: none;
       width: 560px;
       height: 315px;
-      margin 20px auto;
+      margin: 10px auto 0 auto;
+      display: none;
       
     }
     #my-button {
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
+  width: 120px;
+  flex-shrink: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
     #my-button img {
       width: 120px; 
       height: auto;
